# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [4.0.1] - 2022-03-14

### Added

- Status de Roleta `/status roleta`

### Changed

- Dificuldade de subir de nível foi aumentado para `1.62`
- Tempo de resposta da Dungeon foi aumentado para `20s`

### Fixed

- Erros de português no comando `/ship`
- O valor de lucro da roleta foi ajustado para todas apostas que duplicava o valor real.
- Erros do RPG: Muitos erros aconteciam como 'Cannot read [0] of undefined'. Isso foi resolvido com um novo sistema de interações que, eu creio, que vão arrumar o problema, que era causado por lags entre a Menhera e o Discord

### Removed

- Colocação do usuário no top ao caçar

## [4.0.H-BETA] - 2022-03-01

### Added

- Os comandos do RPG agora tem um botão extra para terminar o comando na hora para não ter que esperar o tempo de execução para utilizar outro comando
- Adicionado a **Biblioteca de Boleham** dentro do comando `/centro`. Lá é possível acessar as enciclopédias do mundo para ter informações sobre objetos do RPG. Atualmente é possivel ver informações das habildiades lá. Você pode pesquisar habilidades por ID ou mesmo pelo **NOME** delas.

### Fixed

- Ao fugir da Dungeon, você recebe o cooldown da Dungeon
- O botão vender tudo no centro ta funcionando
- O botão pegar todos os itens na dungeon ta funcinoando

## [4.0.G-BETA] - 2022-02-28

### Added

- Usuários podem tentar fugir de uma batalha a qualquer momento.
- Adicionado a opção de selecionar todos itens no final da batalha da dungeon e ao vender os loots no centro

### Changed

- O tempo de morte foi aumentado em `Tempo da Igreja + 1 hora`
- O tempo de resposta de batalha foi aumentado de `12` para `15` segundos

### Fixed

- Arrumado problema da API ficar caindo por conta do jogo do bihco.