@@ -63,6 +63,7 @@
       "NEUTRAL": "Neutro"
     }
   },
+  "exit-command": "Finalizar Comando",
   "unregistered": "Tu ainda não reencarnou no Mundo de Boleham! Registre-se primeiro e tente novamente!",
   "http-error": "Hmmm... Algum erro aconteceu ao processar a imagem... Talvez o servidor de processamento de imagens esteja fora do ar... Tente novamente mais tarde!"
 }
